Refactor Play Button

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </a>
       </div>
       <div class='instructions-container'>
-        <h2> Instructions </h2>
-        <p>Microphone</p>
+        <h2>Features</h2>
+        <p>Microphone Input</p>
           <div class='instructions'>
             <ul>
               <li>
@@ -66,14 +66,14 @@
             </li>
           </ul>
         </div>
-        <p>Record Audio</p>
+        <p>Recording</p>
           <div class='instructions'>
             <ul>
               <li>
-                Click red recording button to start/stop recording
+              'RECORD' button: Start/stop recording
               </li>
               <li>
-                Click green save button to download
+                'SAVE' button: Download Recording
               </li>
             </ul>
           </div>
@@ -86,18 +86,21 @@
               <div class='samples'>
                 <ul>
                   <li>
-                    <h3>Sample 1: </h3><div class='sample-item' id='play1'>
-                      <i class="fa fa-play"></i>
+                    <h3>Sample 1: </h3>
+                    <div>
+                      <i id='play1' class="sample-item fa fa-play"></i>
                     </div>
                   </li>
                   <li>
-                    <h3>Sample 2: </h3><div class='sample-item' id='play2'>
-                      <i class="fa fa-play"></i>
+                    <h3>Sample 2: </h3>
+                    <div>
+                      <i id='play2' class="sample-item fa fa-play"></i>
                     </div>
                   </li>
                   <li>
-                    <h3>Sample 3: </h3><div class='sample-item' id='play3'>
-                      <i class="fa fa-play"></i>
+                    <h3>Sample 3: </h3>
+                    <div>
+                      <i id='play3' class="sample-item fa fa-play"></i>
                     </div>
                   </li>
                 </ul>
