--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       </div>
       <div class='instructions-container'>
         <h2>Features</h2>
-        <p>Microphone Input</p>
+        <p>Mic Input</p>
           <div class='instructions'>
             <ul>
               <li>
                 Plug in headphones
               </li>
               <li>
-                Click 'ON/OFF' at Input below
+                Click 'ON/OFF' at Input module
               </li>
               <li>
-                Click 'ON/OFF' at volume module
+                Click 'ON/OFF' at Volume module
               </li>
             </ul>
           </div>
@@ -51,7 +51,7 @@
               Click 'ON/OFF' at volume module
             </li>
             <li>
-              Trigger samples with play buttons
+              Click play buttons to trigger samples
             </li>
           </ul>
         </div>
@@ -70,43 +70,48 @@
           <div class='instructions'>
             <ul>
               <li>
-              'RECORD' button: Start/stop recording
+              Click 'RECORD' to start/stop recording
               </li>
               <li>
-                'SAVE' button: Download Recording
+                Click 'SAVE' to download recording
               </li>
             </ul>
           </div>
-          <div class='user-controls'>
-            <div class='controls-container'>
-              <div class='select-input'>
-              <h2>Input</h2>
-                <div id='input-on-off' class='off'>ON/OFF</div>
-              </div>
-              <div class='samples'>
-                <ul>
-                  <li>
-                    <h3>Sample 1: </h3>
-                    <div>
-                      <i id='play1' class="sample-item fa fa-play"></i>
-                    </div>
-                  </li>
-                  <li>
-                    <h3>Sample 2: </h3>
-                    <div>
-                      <i id='play2' class="sample-item fa fa-play"></i>
-                    </div>
-                  </li>
-                  <li>
-                    <h3>Sample 3: </h3>
-                    <div>
-                      <i id='play3' class="sample-item fa fa-play"></i>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
+      </div>
+      <div class='user-controls'>
+        <i class="fa fa-question-circle input-question" aria-hidden="true"></i>
+        <div class='input-instructions'>
+          <li>Click 'ON/OFF' to enable mic</li>
+          <li>Trigger samples after turning on audio in 'Volume' module</li>
+        </div>
+        <div class='controls-container'>
+          <div class='select-input'>
+            <h2>Input</h2>
+            <div id='input-on-off' class='off'>ON/OFF</div>
           </div>
+          <div class='samples'>
+            <ul>
+              <li>
+                <h3>Sample 1: </h3>
+                <div>
+                  <i id='play1' class="sample-item fa fa-play"></i>
+                </div>
+              </li>
+              <li>
+                <h3>Sample 2: </h3>
+                <div>
+                  <i id='play2' class="sample-item fa fa-play"></i>
+                </div>
+              </li>
+              <li>
+                <h3>Sample 3: </h3>
+                <div>
+                  <i id='play3' class="sample-item fa fa-play"></i>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
 
       <a class='site-button' target='_blank'
