--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
       <div class='user-controls'>
         <i class="fa fa-question-circle input-question" aria-hidden="true"></i>
         <div class='input-instructions'>
-          <li>Click 'ON/OFF' to enable mic</li>
-          <li>Trigger samples after turning on audio in 'Volume' module</li>
+          <li>Here you can choose to use WebFX with a live audio signal or pre-loaded samples</li>
+          <li>For a live audio signal, push the input button to enable the microphone then turn the audio on at the volume module</li>
+          <li>To use preloaded samples, turn the volume nodule on, then trigger the samples by pushing the play buttons below</li>
         </div>
         <div class='controls-container'>
           <div class='select-input'>
@@ -126,10 +127,10 @@
         <i class="fa fa-question-circle volume-question" aria-hidden="true"></i>
         <div class='volume-instructions'>
           <li>
-            ON/OFF: Start/stop audio
+            This module controls the audio output and displays an oscilloscope. Use the button to mute/unmute sound and the slider to change the volume.
           </li>
           <li>
-            Control volume with slider
+            The oscilloscope is a visual representation of the audio signal after effect processing. It's just a waveform of the live sound!
           </li>
         </div>
         <h2> Volume </h2>
@@ -149,21 +150,9 @@
         <div class='delay-container'>
           <i class="fa fa-question-circle delay-question" aria-hidden="true"></i>
           <div class='delay-instructions'>
-            <li>
-              ON/OFF: Start/stop delay
-            </li>
-            <li>
-              Speed: Control delay time
-            </li>
-            <li>
-              Length: Control delay decay
-            </li>
-            <li>
-              Level: Control delay volume
-            </li>
-            <li>
-              Filter: Control delay cutoff freq
-            </li>
+            <li>The Delay effect records the audio input and plays it back after a period of time (controlled by the 'Speed' slider). </li>
+            <li>The delayed sound can be repeated a certain number of times. To control the number of delays and their volume, use the 'Length' and 'Level' sliders. </li>
+             <li>The tone of the delayed sound can also be controlled with the 'filter' slider</li>
           </div>
           <h2> Delay </h2>
           <div class='delay-controls'>
@@ -193,13 +182,13 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            ON/OFF: Start/stop tremolo
+            The Tremolo effect is a 'wavering' effect on the sound input. This is achieved by oscillating the gain or volume of the sound will forth between two values.
           </li>
           <li>
-            Depth: Control minimum gain
+            The depth slider will control the intensity of the effect by altering the minimum gain value in oscillation. The speed slider controls the time between oscillations.
           </li>
           <li>
-            Speed: Control oscillation speed
+            For the most pronounced version of the effect (the deepest and fastest oscillation), put the 'Depth' and 'Speed' sliders at their lowest levels.
           </li>
         </div>
         <h2> Tremolo </h2>
