--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            The Tremolo effect is a 'wavering' effect on the sound input. This is achieved by oscillating the gain or volume of the sound will forth between two values.
+            Tremolo gives a 'wavering' effect on the sound. This is achieved by oscillating the volume of the sound back and forth between two values.
           </li>
           <li>
-            The depth slider will control the intensity of the effect by altering the minimum gain value in oscillation. The speed slider controls the time between oscillations.
+            The depth slider controls the intensity of the effect by altering the minimum volume for each oscillation. The speed slider just controls the time for one oscillation.
           </li>
           <li>
             For the most pronounced version of the effect (the deepest and fastest oscillation), put the 'Depth' and 'Speed' sliders at their lowest levels.
