--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       <div class='user-controls'>
         <i class="fa fa-question-circle input-question" aria-hidden="true"></i>
         <div class='input-instructions'>
-          <li>Here you can choose to use WebFX with a live audio signal or pre-loaded samples</li>
+          <li>You can use WebFX with a live audio signal or pre-loaded samples</li>
           <li>For a live audio signal, push the input button to enable the microphone then turn the audio on at the volume module</li>
-          <li>To use preloaded samples, turn the volume nodule on, then trigger the samples by pushing the play buttons below</li>
+          <li>To use preloaded samples, turn the volume module on, then trigger the samples by pushing the play buttons below</li>
         </div>
         <div class='controls-container'>
           <div class='select-input'>
@@ -152,7 +152,7 @@
           <div class='delay-instructions'>
             <li>The Delay effect records the audio input and plays it back after a period of time (controlled by the 'Speed' slider). </li>
             <li>The delayed sound can be repeated a certain number of times. To control the number of delays and their volume, use the 'Length' and 'Level' sliders. </li>
-             <li>The tone of the delayed sound can also be controlled with the 'filter' slider</li>
+             <li>The tone of the delayed sound can be controlled with the 'filter' slider</li>
           </div>
           <h2> Delay </h2>
           <div class='delay-controls'>
@@ -182,13 +182,13 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            Tremolo gives a 'wavering' effect on the sound. This is achieved by oscillating the volume of the sound back and forth between two values.
+            Tremolo has a 'wavering' effect on the sound achieved by oscillating the volume of sound between two values.
           </li>
           <li>
-            The depth slider controls the intensity of the effect by altering the minimum volume for each oscillation. The speed slider just controls the time for one oscillation.
+            The depth slider controls the intensity of the effect by altering the minimum volume for each oscillation. The speed slider just controls the time per oscillation.
           </li>
           <li>
-            For the most pronounced version of the effect (the deepest and fastest oscillation), put the 'Depth' and 'Speed' sliders at their lowest levels.
+            For the most pronounced version of the effect (the deepest and fastest oscillation), set the 'Depth' and 'Speed' sliders to their lowest levels.
           </li>
         </div>
         <h2> Tremolo </h2>
