--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <div class='user-controls'>
         <i class="fa fa-question-circle input-question" aria-hidden="true"></i>
         <div class='input-instructions'>
-          <li>You can use WebFX with a live audio signal or pre-loaded samples</li>
-          <li>For a live audio signal, push the input button to enable the microphone then turn the audio on at the volume module</li>
+          <li>WebFX can be used with a live audio signal or pre-loaded samples</li>
+          <li>For a live audio signal, push the input button to enable the microphone then turn on audio at the volume module</li>
           <li>To use preloaded samples, turn the volume module on, then trigger the samples by pushing the play buttons below</li>
         </div>
         <div class='controls-container'>
@@ -182,13 +182,13 @@
         <i class="fa fa-question-circle tremolo-question" aria-hidden="true"></i>
         <div class='tremolo-instructions'>
           <li>
-            Tremolo has a 'wavering' effect on the sound achieved by oscillating the volume of sound between two values.
+            Tremolo is a 'wavering' effect achieved by oscillating sound volume between two values.
           </li>
           <li>
-            The depth slider controls the intensity of the effect by altering the minimum volume for each oscillation. The speed slider just controls the time per oscillation.
+            The depth slider controls the intensity of the effect by altering the minimum volume for each oscillation. The speed slider controls the time per oscillation.
           </li>
           <li>
-            For the most pronounced version of the effect (the deepest and fastest oscillation), set the 'Depth' and 'Speed' sliders to their lowest levels.
+            For the most pronounced version of the effect (deepest and fastest oscillation), set the 'Depth' and 'Speed' sliders to their lowest levels.
           </li>
         </div>
         <h2> Tremolo </h2>
