--- a/index.html
+++ b/index.html
@@ -29,22 +29,19 @@
         </a>
       </div>
       <div class='instructions-container'>
-        <h2>Features</h2>
-        <p>Mic Input</p>
+        <h2>Instructions</h2>
+        <p>Choose Input</p>
           <div class='instructions'>
             <ul>
               <li>
                 Plug in headphones
               </li>
               <li>
-                Click 'ON/OFF' at Input module
-              </li>
-              <li>
-                Click 'ON/OFF' at Volume module
+                Click 'ON/OFF' at 'Input' for mic access
               </li>
             </ul>
           </div>
-        <p>Samples</p>
+        <p>Start Audio</p>
         <div class='instructions'>
           <ul>
             <li>
@@ -55,7 +52,7 @@
             </li>
           </ul>
         </div>
-        <p>Effects</p>
+        <p>Use Effects</p>
         <div class='instructions'>
           <ul>
             <li>
@@ -66,7 +63,7 @@
             </li>
           </ul>
         </div>
-        <p>Recording</p>
+        <p>Record Sounds</p>
           <div class='instructions'>
             <ul>
               <li>
@@ -83,7 +80,7 @@
         <div class='input-instructions'>
           <li>WebFX can be used with a live audio signal or pre-loaded samples</li>
           <li>For a live audio signal, push the input button to enable the microphone then turn on audio at the volume module</li>
-          <li>To use preloaded samples, turn the volume module on, then trigger the samples by pushing the play buttons below</li>
+          <li>To use preloaded samples, turn the volume module on, then trigger a sample by pushing a play button below</li>
         </div>
         <div class='controls-container'>
           <div class='select-input'>
