--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
           <div class='samples'>
             <ul>
               <li>
-                <h3>Sample 1: </h3>
+                <h3>Sample 1 </h3>
                 <div>
                   <i id='play1' class="sample-item fa fa-play"></i>
                 </div>
               </li>
               <li>
-                <h3>Sample 2: </h3>
+                <h3>Sample 2 </h3>
                 <div>
                   <i id='play2' class="sample-item fa fa-play"></i>
                 </div>
               </li>
               <li>
-                <h3>Sample 3: </h3>
+                <h3>Sample 3 </h3>
                 <div>
                   <i id='play3' class="sample-item fa fa-play"></i>
                 </div>
@@ -115,7 +115,7 @@
       <a class='site-button' target='_blank'
         href='https://www.joetessy.life'>
         <div class=site-link>
-          <h2> by Joe Tessy</h2>
+          <h2> BY JOE TESSY</h2>
         </div>
       </a>
     </div>
