--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class='info'>
       <img src='./fonts/webfx.png' class='logo'/>
       <div class='social-links'>
-        <a target='_blank' class='github-link' href='http://www.github.com/joetessy/WebFX'>
+        <a target='_blank' class='github-link' href='http://www.github.com/joetessy/webfx'>
           <i class="devicon-github-plain"></i>
         </a>
         <a target='_blank' class='github-link' href='http://www.linkedin.com/in/joetessy'>
