--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebFX by Joe Tessy</title>
+    <title>WebFX</title>
     <link rel="icon"
       type="image/png"
       src="./docs/favicon.png">
