--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebFX</title>
-    <link rel="icon"
-      type="image/png"
-      src="./docs/favicon.png">
     <script src="https://use.fontawesome.com/851d5e5f47.js"></script>
     <script src="./scripts/recorderjs/recorder.js"></script>
+    <link rel="shortcut icon" href="docs/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
